--- a/Frontend/src/app/register/register.component.html
+++ b/Frontend/src/app/register/register.component.html
@@ -1,1 +1,89 @@
 <p>register works!</p>
+<div class="col-md-3">
+
+</div>
+<div class="col-12 col-md-5 mx-auto my-5 d-flex justify-content-center" >
+  <!-- Default form register -->
+  <form class="text-center border border-light p-5">
+
+    <p class="h4 mb-4">Sign up</p>
+
+    <div class="form-row mb-4">
+      <div class="col">
+        <!-- First name -->
+        <input type="text" id="form1" class="form-control" placeholder="First name">
+      </div>
+      <div class="col">
+        <!-- Last name -->
+        <input type="text" id="form2" class="form-control" placeholder="Last name">
+      </div>
+    </div>
+
+    <div class="form-row mb-4">
+      <div class="col">
+        <label for="form3" class="">Course</label>
+        <select class="form-control">
+
+          <option value="" disabled>Select Course</option>
+          <!-- <option *ngFor="let item of courseList" [value]="item.name"> {{ item?.name }}</option> -->
+
+
+        </select>
+      </div>
+      <div class="col">
+        <label for="form4" class="">Graduation Year</label>
+        <select class="form-control">
+
+          <option value="" disabled>Select year</option>
+          <!-- <option *ngFor="let item of yearList" [value]="item.name"> {{ item?.name }}</option> -->
+        </select>
+      </div>
+    </div>
+
+    <div class="form-row mb-4">
+  <div class="col">
+    <input type="text" id="form5" class="form-control" placeholder="Roll Number">
+  </div>
+    </div>
+
+    <!-- E-mail -->
+    <input type="email" id="form6" class="form-control mb-4" placeholder="E-mail">
+
+    <!-- Password -->
+    <input type="password" id="form7" class="form-control" placeholder="Set Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+      At least 8 characters and 1 digit
+    </small>
+
+    <!-- Phone number -->
+    <input type="text" id="form8" class="form-control" placeholder="Phone number" aria-describedby="defaultRegisterFormPhoneHelpBlock">
+    <small id="defaultRegisterFormPhoneHelpBlock" class="form-text text-muted mb-4">
+      Optional - for two-step authentication
+    </small>
+
+    <!-- Newsletter -->
+    <div class="row">
+      <div class="col-md-6 mx-auto d-flex justify-content-center">
+
+      </div>
+    </div>
+
+    <!-- Sign up button -->
+    <button mdbBtn color="info" block="true" class="my-4" type="submit">Sign in</button>
+
+
+
+    <hr>
+
+    <!-- Terms of service -->
+    <p>By clicking
+      <em>Sign up</em> you agree to our
+      <a href="" target="_blank">terms of service</a></p>
+
+  </form>
+  <!-- Default form register -->
+</div>
+
+<div class="col-md-4">
+
+</div>
