--- a/Frontend/src/app/login/login.component.html
+++ b/Frontend/src/app/login/login.component.html
@@ -1,1 +1,48 @@
-<p>login works!</p>
+<br>
+<div class="col-md-3">
+
+</div>
+<div class="col-12 col-md-5 mx-auto my-5 d-flex justify-content-center" >
+  <!-- Default form register -->
+  <form class="text-center border border-light p-5" [formGroup]="loginForm">
+
+    <p class="h4 mb-4">Login</p>
+
+    <div class="form-row mb-4">
+
+
+
+
+
+
+    <!-- E-mail -->
+    <input formControlName="email" type="email" id="form6" class="form-control mb-4" placeholder="E-mail">
+
+    <!-- Password -->
+    <input formControlName="password" type="password" id="form7" class="form-control" placeholder="Password" aria-describedby="defaultRegisterFormPasswordHelpBlock">
+    <small id="defaultRegisterFormPasswordHelpBlock" class="form-text text-muted mb-4">
+      At least 8 characters and 1 digit
+    </small>
+
+</div>
+
+
+    <!-- Sign up button -->
+    <button mdbBtn color="info" size="lg" block="true" class="my-4" type="submit" (click)="login()">Sign in</button>
+
+
+
+
+
+
+
+  </form>
+  <!-- Default form login -->
+</div>
+
+<div class="col-md-4">
+
+</div>
+
+
+
