--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -1,1 +1,32 @@
-<p>alumni-home works!</p>
+<mdb-card style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/gradient1.jpg')">
+    <div class="text-white text-center py-5 px-4 my-5">
+      <div>
+        <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><mdb-icon fab icon="500px"></mdb-icon>Create your beautiful website with MDBootstrap</strong></h2>
+        <p class="mx-5 mb-5">Hello {{Username}}
+        </p>
+        <a mdbBtn color="white" outline="true" class="waves-light" mdbWavesEffect>
+          <mdb-icon fas icon="clone" class="left"></mdb-icon>View project
+        </a>
+      </div>
+    </div>
+  </mdb-card>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <br>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <br>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <br>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <br>
+  <div class="progress">
+    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
+  </div>
+  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)='logout()'>LOgout</button>
