--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -1,8 +1,9 @@
 <mdb-card style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/gradient1.jpg')">
     <div class="text-white text-center py-5 px-4 my-5">
       <div>
-        <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><mdb-icon fab icon="500px"></mdb-icon>Create your beautiful website with MDBootstrap</strong></h2>
-        <p class="mx-5 mb-5">Hello {{Username}}
+        <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><mdb-icon fab icon="500px"></mdb-icon>Hello {{Username}}</strong></h2>
+        <p class="mx-5 mb-5">yes it worked
+          
         </p>
         <a mdbBtn color="white" outline="true" class="waves-light" mdbWavesEffect>
           <mdb-icon fas icon="clone" class="left"></mdb-icon>View project
