--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -1,7 +1,7 @@
 <mdb-card style="background-image: url('https://mdbcdn.b-cdn.net/img/Photos/Others/gradient1.jpg')">
     <div class="text-white text-center py-5 px-4 my-5">
       <div>
-        <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong><mdb-icon fab icon="500px"></mdb-icon>Hello {{Username}}</strong></h2>
+        <h2 class="card-title h1-responsive pt-3 mb-5 font-bold"><strong>Hello {{fname}} {{lname}} [{{course}} {{branch}}]</strong></h2>
         <p class="mx-5 mb-5">yes it worked
           
         </p>
@@ -11,23 +11,22 @@
       </div>
     </div>
   </mdb-card>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
+<br>
+<div class="col-12">
+  <div class="col-6"></div>
+  <form class="col-6" [formGroup]="BlogForm">
+  <div class="md-form col-6">
+    <input id="input_text" class="form-control" formControlName="btitle" type="text" length="10" mdbCharCounter mdbInput>
+    <label for="input_text">Title</label>
   </div>
-  <br>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 25%" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100"></div>
+  <div class="md-form col-6">
+    <textarea formControlName="bblog" class="md-textarea form-control " rows="3" id="input_text" type="text" length="120" mdbCharCounter mdbInput></textarea>
+    <label for="input_text">Type your thoughts</label>
   </div>
-  <br>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 50%" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-  <br>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-  <br>
-  <div class="progress">
-    <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
-  </div>
-  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)='logout()'>LOgout</button>
+  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)="BlogPost">Post</button>
+
+</form>
+</div>
+
+
+  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)='logout()'>LogOut</button>
