--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -23,7 +23,7 @@
     <textarea formControlName="bblog" class="md-textarea form-control " rows="3" id="input_text" type="text" length="120" mdbCharCounter mdbInput></textarea>
     <label for="input_text">Type your thoughts</label>
   </div>
-  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)="BlogPost">Post</button>
+  <button type="button" mdbBtn color="primary" mdbWavesEffect>Post</button>
 
 </form>
 </div>
