token work done

--- a/Frontend/src/app/header/header.component.html
+++ b/Frontend/src/app/header/header.component.html
@@ -19,6 +19,9 @@
           <a class="nav-link waves-light" routerLink = "/register" mdbWavesEffect> REGISTER</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link waves-light" routerLink = "/alumni-home" mdbWavesEffect> HOME</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link waves-light" routerLink = "/editprofile" mdbWavesEffect><mdb-icon fas icon="cog"></mdb-icon> EDIT PROFILE</a>
         </li>
         
