--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -12,7 +12,9 @@
     </div>
   </mdb-card>
   <div class="row">
-      <div class="col-8"></div>
+      <div class="col-8">
+        <app-blogs></app-blogs>
+      </div>
   <form action="" class="col-4" [formGroup]="BlogForm">
     <div class="md-form">
     <input mdbInput type="text" id="form1" formControlName="tblog" class="form-control">
