navbar auth status

--- a/Frontend/src/app/alumni-home/alumni-home.component.html
+++ b/Frontend/src/app/alumni-home/alumni-home.component.html
@@ -30,4 +30,4 @@
   <div class="progress">
     <div class="progress-bar" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"></div>
   </div>
-  <button type="button" mdbBtn color="primary" mdbWavesEffect (click)='logout()'>LOgout</button>
+  <!-- <button type="button" mdbBtn color="primary" mdbWavesEffect (click)='logout()'>LOgout</button> -->
