--- a/Frontend/src/app/register/register.component.html
+++ b/Frontend/src/app/register/register.component.html
@@ -71,8 +71,9 @@
 
     <!-- Newsletter -->
     <div class="row">
-      <div class="col-md-6 mx-auto d-flex justify-content-center">
-
+      <div class="col-md-7 mx-auto d-flex justify-content-center">
+        <button type="button" size="lg" mdbBtn color="secondary" (click)="imgPicker.click()" mdbWavesEffect>Select Image</button>
+        <input type="file" #imgPicker>
       </div>
     </div>
 
