--- a/Frontend/src/app/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/edit-profile/edit-profile.component.html
@@ -1,1 +1,43 @@
-<p>edit-profile works!</p>
+
+<div class="h3 m-5 pl-4">
+    Persional details
+</div>
+
+<div class="row m-5">
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="Name" class="form-label">Name</label>
+            <input type="text" class="form-control" id="Name" placeholder="{{fname}} {{lname}}" disabled>
+          </div>
+    </div>
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="email" class="form-label">Email</label>
+            <input type="text" class="form-control" id="email" placeholder="{{email}}" disabled>
+          </div>
+    </div>
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="phone" class="form-label">Phone</label>
+            <input type="text" class="form-control" id="phone" placeholder="{{phone}}" disabled>
+          </div>
+    </div>
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="course" class="form-label">Course</label>
+            <input type="text" class="form-control" id="course" placeholder="{{course}} {{branch}}" disabled>
+          </div>
+    </div>
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="gyear" class="form-label">Graduation Year</label>
+            <input type="text" class="form-control" id="gyear" placeholder="{{gyear}}" disabled>
+          </div>
+    </div>
+    <div class="col-6 col-md-4">
+        <div class="mb-3">
+            <label for="roll" class="form-label">Roll Number</label>
+            <input type="text" class="form-control" id="roll" placeholder="{{roll}}" disabled>
+          </div>
+    </div>
+</div>
