edit prof exp minor changes

--- a/Frontend/src/app/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/edit-profile/edit-profile.component.html
@@ -83,7 +83,7 @@
         SAVE CHANGES
     </a> -->
     <div class="text-center">
-       <button *ngIf="AtLeastOneExp" (click)="saveProfile()" mdbBtn class="btn-lg btn-success waves-light"
+       <button *ngIf="editExp" (click)="saveProfile()" mdbBtn class="btn-lg btn-success waves-light"
         mdbWavesEffect>SAVE CHANGES</button>
      </div>
 <!-- Adding Experience Modal -->
