--- a/Frontend/src/app/register/register.component.html
+++ b/Frontend/src/app/register/register.component.html
@@ -70,7 +70,7 @@
     </small>
 
     <!-- IMAGE UPLOAD -->
-    <div class="row">
+    <!-- <div class="row">
       <div class="col-6 mx-auto d-flex justify-content-center">
         <button type="button" size="lg" mdbBtn color="secondary" (click)="imgPicker.click()" mdbWavesEffect>Select Image</button>
         <input type="file" #imgPicker (change) = "imagePicked($event)">
@@ -78,7 +78,7 @@
         <div class="col-6 img-preview" *ngIf="imgPreview !== '' && imgPreview &&  registerForm.get('photo').valid ">
           <img [src]="imgPreview" [alt]="registerForm.value.fname">
         </div>
-    </div>
+    </div> -->
 <!-- IMAGE UPLOAD -->
 
     <!-- Sign up button -->
