--- a/Frontend/src/app/search-alumni/search-alumni.component.html
+++ b/Frontend/src/app/search-alumni/search-alumni.component.html
@@ -1,14 +1,36 @@
-
+<!-- here -->
+<!--  -->
   <div class="form-group px-5 m-5">
     <!-- <label for="search">search</label> -->
-    <input type="text" [(ngModel)]="searchvalue1"  class="form-control" placeholder="name">
+    <input type="text" [(ngModel)]="searchName"  class="form-control" placeholder="name">
   </div>
-  <div class="form-group px-5 m-5">
-    <!-- <label for="search">search</label> -->
-    <input type="text" [(ngModel)]="searchvalue2"  class="form-control" placeholder="course">
-  </div>
+  <!-- <div class="form-group px-5 m-5">
+    <label for="search">search</label>
+    <input type="text" [(ngModel)]="searchCourse"  class="form-control" placeholder="course">
+  </div> -->
 <div class="row">
-  <div class="col-5" *ngFor = "let user of alluser |  alumniSearch:searchvalue1:searchvalue2 ">
+  <div class="col-2">
+    <h2 class="text-center">Filters</h2>
+    <div class="form-group">
+      <label for="form3" class="">Course</label>
+        <select class="form-control" [(ngModel)] ="searchCourse">
+          <option value="">Select Course</option>
+          <option *ngFor="let item of courseList" [value]="item.value"> {{ item?.value }}</option>
+  
+        </select>     
+    </div>
+    <div class="form-group" *ngIf = "searchCourse == 'B-Tech' ">
+      <label for="form3" class="">Stream</label>
+        <select class="form-control" [(ngModel)] ="searchStream">
+          <option value="">Select Stream</option>
+          <option *ngFor="let item of streamList" [value]="item.value"> {{ item?.value }}</option>
+  
+        </select>     
+    </div>
+    <input type="text" [(ngModel)]="searchYear"  class="form-control" placeholder="Passout">
+     </div>
+  <div class="row col-10">
+<div class="col-5" *ngFor = "let user of alluser |  alumniSearch:searchName:searchCourse:searchStream:searchYear ">
 <div class="card m-5" style="width: 38rem;">
     <!-- <img class="card-img-top" src="..." alt="Card image cap"> -->
     <div class="card-body">
@@ -18,5 +40,7 @@
     </div>
   </div> 
   </div>
+  </div>
+  
    
 </div>
