both buttons work

--- a/Frontend/src/app/admin/requests/requests.component.html
+++ b/Frontend/src/app/admin/requests/requests.component.html
@@ -11,8 +11,8 @@
                         <a href="#" class="btn btn-primary">View</a>
                     </div>
                     <div class="col-6">
-                        <a (click)="acceptVerify()" class="btn btn-success m-2">Accept</a>
-                        <a class="btn btn-danger m-2">Decline</a>
+                        <a (click)="acceptVerify(user)" class="btn btn-success m-2">Accept</a>
+                        <a (click)="deleteUser(user)" class="btn btn-danger m-2">Decline</a>
                     </div>
                 </div>
 
