--- a/Frontend/src/app/alumni/edit-profile/edit-profile.component.html
+++ b/Frontend/src/app/alumni/edit-profile/edit-profile.component.html
@@ -223,7 +223,7 @@
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="comp" class="form-label">Company</label>
-                                <input type="text" id="comp" class="form-control" formControlName="company" placeholder="">
+                                <input type="text" id="comp" class="form-control" formControlName="company" placeholder="Company Name">
                             </div>
                         </div>
                         <div class="col-md-6">
