--- a/Frontend/src/app/shared/search-alumni/search-alumni.component.html
+++ b/Frontend/src/app/shared/search-alumni/search-alumni.component.html
@@ -2,7 +2,7 @@
 <!--  -->
 <div class="form-group px-5 m-5">
     <!-- <label for="search">search</label> -->
-    <input type="text" [(ngModel)]="searchName" class="form-control" placeholder="name">
+    <input type="text" [(ngModel)]="searchName" class="form-control" placeholder="Search an Alumni">
 </div>
 <!-- <div class="form-group px-5 m-5">
     <label for="search">search</label>
@@ -10,7 +10,7 @@
   </div> -->
 <div class="row">
     <div class="col-2">
-        <h2 class="text-center">Filters</h2>
+        <h3 class="text-center">Filters</h3>
         <div class="form-group">
             <label for="form3" class="">Course</label>
             <select class="form-control" [(ngModel)]="searchCourse">
@@ -27,7 +27,11 @@
   
         </select>
         </div>
-        <input type="text" [(ngModel)]="searchYear" class="form-control" placeholder="Passout">
+        <div class="form-group">
+            <label for="form1" class="">Batch (Year)</label>
+            <input type="text" [(ngModel)]="searchYear" class="form-control" placeholder="Passout">
+        </div>
+
     </div>
 
     <div class="row col-10">
