--- a/Frontend/src/app/app.component.html
+++ b/Frontend/src/app/app.component.html
@@ -1,4 +1,2 @@
-<div *ngIf="!adminStatus">
-    <app-header></app-header>
-</div>
+<app-header *ngIf="getrole()"></app-header>
 <router-outlet></router-outlet>
