--- a/Frontend/src/app/shared/header/header.component.html
+++ b/Frontend/src/app/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark cyan m-0" [containerInside]="false">
+<mdb-navbar SideClass="navbar navbar-expand-lg navbar-dark dgreen m-0" [containerInside]="false">
 
     <!-- Navbar brand -->
     <mdb-navbar-brand><a class="navbar-brand" href="#">UNION</a></mdb-navbar-brand>
