--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,3 +1,6 @@
+/* @import '~mdbootstrap/css/bootstrap.css';
+@import '~mdbootstrap/css/mdb.min.css'; */
+
 @import '~bootstrap/dist/css/bootstrap.min.css';
 .dgreen {
     background-color: #005D63;
