--- a/Frontend/src/app/shared/search-alumni/search-alumni.component.html
+++ b/Frontend/src/app/shared/search-alumni/search-alumni.component.html
@@ -41,7 +41,7 @@
                 <div class="card-body">
                     <h5 class="card-title"> <b>Er. {{user.fname}} {{user.lname}}</b> </h5>
                     <p class="card-text">{{user.course}} {{user.branch}} {{user.gyear}} passout</p>
-                    <a href="#" class="btn btn-primary">View</a>
+                    <a [routerLink]="['/profile', user._id]" class="btn btn-primary">View</a>
                 </div>
             </div>
         </div>
