--- a/Frontend/src/app/shared/alumni-profile/alumni-profile.component.html
+++ b/Frontend/src/app/shared/alumni-profile/alumni-profile.component.html
@@ -7,9 +7,9 @@
                 <img src="https://vegnews.com/media/W1siZiIsIjY0MDQvVmVnTmV3cy5MaXNhU2ltcHNvbi5qcGciXSxbInAiLCJ0aHVtYiIsIjEzNjB4ODA0IyIseyJmb3JtYXQiOiJqcGcifV0sWyJwIiwib3B0aW1pemUiXV0/VegNews.LisaSimpson.jpg?sha=6e3bddfa0602bd55" class="img-fluid rounded-circle " style="height:200px; width:200px;">
             </div>
             <div class="col-9">
-                <h2>{{resAlumni.fname}}</h2>
-                <h4>BCA</h4>
-                <h4>Batch 2019</h4>
+                <h2>{{resAlumni.fname}} {{resAlumni.lname}}</h2>
+                <h4>{{resAlumni.course}} {{resAlumni.branch}}</h4>
+                <h4>{{resAlumni.gyear}}</h4>
                 <h4>Works at Experian Tech</h4>
                 <h4>Lives in Pune, Maharashtra, India</h4>
             </div>
