--- a/Frontend/src/app/admin/admin-home/admin-home.component.html
+++ b/Frontend/src/app/admin/admin-home/admin-home.component.html
@@ -11,7 +11,7 @@
                     <!-- <a class="nav-link mb-2 py-3" id="v-pills-messages-tab" data-toggle="pill" [routerLink]="['messages']" routerLinkActive="active" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
                     <a class="nav-link mb-2 py-3" id="v-pills-profile-tab" data-toggle="pill" [routerLink]="['editProfile']" routerLinkActive="active" role="tab" aria-controls="v-pills-profile" aria-selected="false">Edit Profile</a>
                     <a class="nav-link mb-2 py-3" id="v-pills-changepwd-tab" data-toggle="pill" [routerLink]="['changepassword']" routerLinkActive="active" role="tab" aria-controls="v-pills-changepwd" aria-selected="false">Change Password</a> -->
-                    <a class="nav-link mb-2 py-3" id="v-pills-logout" data-toggle="pill" role="tab" (click)="logout()" routerLinkActive="active" aria-controls="v-pills-logout" aria-selected="false">Logout</a>
+                    <!-- <a class="nav-link mb-2 py-3" id="v-pills-logout" data-toggle="pill" role="tab" (click)="logout()" routerLinkActive="active" aria-controls="v-pills-logout" aria-selected="false">Logout</a> -->
                 </div>
             </div>
         </div>
