--- a/Frontend/src/app/alumni/login/login.component.html
+++ b/Frontend/src/app/alumni/login/login.component.html
@@ -2,9 +2,9 @@
 <div class="col-md-3">
 
 </div>
-<div class="col-12 col-md-6 mx-auto my-5 d-flex justify-content-center">
+<div class="col-12 col-md-6 mx-auto my-5 d-flex justify-content-center ">
     <!-- Default form register -->
-    <form class="text-center border border-light p-5" [formGroup]="loginForm">
+    <form class="text-center border border-light p-5 dgreen" [formGroup]="loginForm">
 
         <p class="h4 mb-4">Login</p>
 
@@ -23,7 +23,7 @@
         <div>New to Union?<a routerLink="/register"> Sign up here!</a></div>
 
         <!-- Sign up button -->
-        <button mdbBtn color="info" size="lg" block="true" class="my-4" type="submit" (click)="login()">Sign in
+        <button mdbBtn size="lg" block="true" class="my-4 basicbtn white" type="submit" (click)="login()">Sign in
      </button>
 
         <!-- Loader -->
